--- a/Mobile/app.json
+++ b/Mobile/app.json
@@ -24,10 +24,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./src/assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.trapass19.Mobile"
     },
     "web": {
       "favicon": "./src/assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "164dbdd8-db2f-45f0-8a23-ab65cfc92d4a"
+      }
     }
   }
 }
