--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -19,6 +19,7 @@
     "chalk": "^5.1.2",
     "expo": "~47.0.8",
     "expo-blur": "^12.0.1",
+    "expo-dev-client": "~2.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
