--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -20,7 +20,9 @@
     "expo": "~47.0.8",
     "expo-blur": "^12.0.1",
     "expo-dev-client": "~2.0.1",
+    "expo-linking": "~3.2.3",
     "expo-status-bar": "~1.4.2",
+    "expo-web-browser": "~12.0.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-gesture-handler": "^2.8.0",
