--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -28,6 +28,7 @@
     "react-native-gesture-handler": "^2.8.0",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "^4.4.1",
+    "react-native-toast-message": "^2.1.5",
     "react-native-vector-icons": "^9.2.0",
     "react-navigation": "^4.4.4",
     "react-redux": "^8.0.5",
